Agregado css, logo, enlaces en footer

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Acrópolis Metal - Registro</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
 	<article>
-		<section>
+		<section id="info">
 			<div id="img">
-				<img src="" alt="Logo Acrópolis Metal" />
+				<img src="media/imgs/logo.jpg" alt="Logo Acrópolis Metal" />
 			</div>
 			<div id="bienvenida">
 				<p>
@@ -16,8 +17,8 @@
 				</p>
 			</div>
 		</section>
-		<section>
-			<form action="">
+		<section id="formRegistro">
+			<form action="" method="">
 				<h3>Regístrate</h3>
 				<label>Usuario: </label> <input type="text" maxlength="10" required="required" />
 				<label>Primer Nombre: </label> <input type="text" maxlength="30" required="required" />
@@ -32,28 +33,28 @@
 
 	<footer>
 		<ul>
-			<li>Items</li>
-			<li>Items</li>
-			<li>Items</li>
-			<li>Items</li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
 		</ul>
 		<ul>
-			<li>Items</li>
-			<li>Items</li>
-			<li>Items</li>
-			<li>Items</li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
 		</ul>
 		<ul>
-			<li>Items</li>
-			<li>Items</li>
-			<li>Items</li>
-			<li>Items</li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
 		</ul>
 		<ul>
-			<li>Items</li>
-			<li>Items</li>
-			<li>Items</li>
-			<li>Items</li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
+			<li><a href="">Items</a></li>
 		</ul>
 	</footer>
 </body>
