Formulario responsive y arreglo de boton registro

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div id="contenedor">
 		<header>
 			<div id="logoNav">
-				<img src="media/imgs/logo.jpg" alt="Logo Acrópolis Metal" />
+				<img src="media/imgs/logo.jpg" alt="Logo Acrópolis Metal" class="logoNavImg" />
 				<p>Acrópolis Metal</p>
 			</div>
 			<nav>
@@ -54,8 +54,10 @@
 							<label for="txtContrasenia" class="label">Contraseña: </label>
 						</div>
 							
-						<div class="inputGroup">	
-							<input type="submit" value="Registrarme" class="submit" id="submit">
+						<div class="inputGroup">
+							<div class="contenedorSubmit">	
+								<input type="submit" value="Registrarme" class="submit" id="submit">
+							</div>
 						</div>	
 							
 					</form>
