--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Acrópolis Metal - Registro</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/estilos.css" />
+	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
@@ -93,6 +94,7 @@
 		</footer>
 
 	</div>
-
+	<script type="text/javascript" src="js/formRegistro.js">
+	</script>
 </body>
 </html>
