Añadido campo correo y correccion en animacion de labels

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 						</div>
 
 						<div class="inputGroup">
+							<input type="email" maxlength="80" required="required" name="txtCorreo" id="txtCorreo" class="textbox"/>
+							<label for="txtCorreo" class="label">Correo: </label>
+						</div>
+
+						<div class="inputGroup">
 							<input type="password" maxlength="10" required="required" name="txtContrasenia" id="txtContrasenia" class="textbox" />
 							<label for="txtContrasenia" class="label">Contraseña: </label>
 						</div>
