--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 				<img src="media/imgs/logo.jpg" alt="Logo Acrópolis Metal" class="logoNavImg" />
 				<p class="fontTitle">Acrópolis Metal</p>
 			</div>
-			<nav>
-				<ul class="fontParagraph">
-					<li><a href="#">¿Quienes Somos?</a></li>
-					<li><a href="#">Nuestro Contenido</a></li>
-				</ul>
+			<nav class="fontParagraph">
+				<div class="contenedorNav">
+					<a href="#" class="linkNav">¿Quienes Somos?</a>
+					<a href="#" class="linkNav">Nuestro Contenido</a>
+				</div>
+				<div class="contenedorLogin">
+					<a href="#" class="linkNav">Inicio de Sesión</a>
+				</div>
 			</nav>
 		</header>
 		
@@ -82,31 +85,36 @@
 			</section>
 		</article>
 
-		<footer>
-			<ul class="fontParagraph">
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-			</ul>
-			<ul class="fontParagraph">
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-			</ul>
-			<ul class="fontParagraph">
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-			</ul>
-			<ul class="fontParagraph">
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-				<li><a href="">Items</a></li>
-			</ul>
+		<footer class="fontParagraph">
+			<div class="navFooter">
+				<div>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+				</div>
+
+				<div>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+				</div>
+
+				<div>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+				</div>
+
+				<div>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Items</a>
+				</div>
+			</div>
 
 			<div class="redesSociales">
 				<div><span class="icon-facebook2 iconAnimation"></span></div>
