Añadido Nav con heigth al 100%

--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
 				<img src="media/imgs/logo.jpg" alt="Logo Acrópolis Metal" class="logoNavImg" />
 				<p class="fontTitle">Acrópolis Metal</p>
 			</div>
+			<div class="menu fontSubtitle">
+				<span>Menú</span>
+				<span class="icon icon-menu"></span>
+			</div>
 			<nav class="fontParagraph">
-				<div class="menu">
-					<span class="icon icon-menu"></span>
-					<div class="contenedorMenu">
-						<a href="#" class="linkNav">¿Quienes Somos?</a>
-						<a href="#" class="linkNav">Nuestro Contenido</a>
-						<a href="#" class="linkNav">Inicio de Sesión</a>
-					</div>
-				</div>
 				<div class="contenedorNav">
 					<a href="#" class="linkNav">¿Quienes Somos?</a>
 					<a href="#" class="linkNav">Nuestro Contenido</a>
