--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	
 	<!--Fuentes-->
 	<link rel="stylesheet" href="css/estilos.css" />
-	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet"> <!--Titulos-->
-	<link href="https://fonts.googleapis.com/css?family=Rancho" rel="stylesheet"> <!--Subtitulos-->
+	<link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet"> <!--Titulos-->
+	<link href="https://fonts.googleapis.com/css?family=New+Rocker" rel="stylesheet"> <!--Subtitulos-->
 	<link href="https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy" rel="stylesheet"> <!--Parrafos-->
 	<link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet"> <!--2da fuente-->
 	<link href="https://fonts.googleapis.com/css?family=Niconne" rel="stylesheet"> <!--Fuente en carta-->
