--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<div class="contenedor">
 		
-		<div class="portada">
+		<div class="portada flexColumnNowrapBetweenCenterBetween">
 			<header>
 				<nav>
 					<div>
