--- a/index.html
+++ b/index.html
@@ -23,61 +23,61 @@
 		
 		<div class="portada flexColumnNowrapBetweenCenterBetween">
 			<header>
-				<nav>
-					<div>
+				<nav class="flexRowWrapBetweenCenterCenter">
+					<div class="navi flexRowWrapStartCenterCenter">
 						<a href="#" class="linkNav fontParagraph">Items</a>
 						<a href="#" class="linkNav fontParagraph">Items</a>
 						<a href="#" class="linkNav fontParagraph">Items</a>
 						<a href="#" class="linkNav fontParagraph">Items</a>
 						<a href="#" class="linkNav fontParagraph">Items</a>
 					</div>
-					<div>
+					<div class="divLogin flexRowWrapEndCenterCenter">
 						<a href="#" class="linkNav fontParagraph">Items</a>
 					</div>
 				</nav>
 			</header>
 
-			<div>
+			<div class="titulo">
 				<h1 class="fontTitle">Acrópolis Metal</h1>
 			</div>
 			
-			<div class="registrate">
+			<div class="registrate flexRowWrapCenterCenterCenter">
 				<a href="#" class="linkBtn fontParagraph">Regístrate</a>
 			</div>
 		</div>		
 
-		<article>
-			<section class="contenedorNoticias">
+		<article class="flexRowWrapCenterStretchCenter">
+			<section class="contenedorNoticias flexColumnNowrapCenterStretchCenter">
 				<div class="subtitulo">
 					<h2 class="fontSubtitle">Noticias</h2>
 				</div>
-				<div class="noticias">
-					<div class="columnNoticias">
-						<div class="itemNoticia">
+				<div class="noticias flexColumnNowrapCenterStretchCenter">
+					<div class="columnNoticias flexRowWrapBetweenStretchCenter">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa accusantium, voluptate quidem enim culpa? Officia ad nam maxime hic, consequuntur porro at explicabo iste, voluptatem odio, accusantium amet minus pariatur!</p>
 						</div>
-						<div class="itemNoticia">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, nam? Soluta ut dolore earum distinctio id rerum voluptatem quam aut, voluptates excepturi quia reprehenderit illum, nostrum commodi nam inventore repudiandae.</p>
 						</div>
-						<div class="itemNoticia">
-							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum magnam repellat similique odio soluta non expedita. Deserunt architecto natus sit optio voluptas ex suscipit, nam quidem. Quia ea, nemo quis.</p>
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
+							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, nam? Soluta ut dolore earum distinctio id rerum voluptatem quam aut, voluptates excepturi quia reprehenderit illum, nostrum commodi nam inventore repudiandae.</p>
 						</div>
 					</div>
-					<div class="columnNoticias">
-						<div class="itemNoticia">
+					<div class="columnNoticias flexRowWrapBetweenStretchCenter">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam necessitatibus vero deserunt nulla quam dolores autem tenetur voluptates, fugiat voluptate labore doloremque! Et, rerum, nemo dolores incidunt porro assumenda eveniet.</p>
 						</div>
-						<div class="itemNoticia">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis quos ex quis debitis, aliquam veritatis? Aliquid deleniti cum, tempora expedita delectus sequi? Ab quidem dignissimos neque iusto totam, similique numquam.</p>
 						</div>
-						<div class="itemNoticia">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, ipsa tempore, illo eos cupiditate voluptates quisquam ex accusamus doloribus recusandae impedit debitis illum mollitia dolore voluptatem, vero in corporis. Dolor.</p>
 						</div>
 					</div>
 				</div>
 			</section>
 			
-			<section class="contenedorEventos">
+			<section class="contenedorEventos flexColumnNowrapCenterCenterCenter">
 				<div class="columnEvento">
 					<div class="imgEvento">
 						<img src="" alt="Imagen del Evento">
