Finalizado nav, article, footer de landing page

--- a/index.html
+++ b/index.html
@@ -47,81 +47,88 @@
 		</div>		
 
 		<article class="flexRowWrapCenterStretchCenter">
-			<section class="contenedorNoticias flexColumnNowrapCenterStretchCenter">
+			<section class="contenedorNoticias flexColumnNowrapStartStretchCenter">
 				<div class="subtitulo">
-					<h2 class="fontSubtitle">Noticias</h2>
+					<h2 class="fontSubtitle">Noticias Y Novedades</h2>
 				</div>
 				<div class="noticias flexColumnNowrapCenterStretchCenter">
 					<div class="columnNoticias flexRowWrapBetweenStretchCenter">
-						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter flexGrowShrink">
+							<h3 class="tituloNoticia fontSubtitle">Título Noticia</h3>
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa accusantium, voluptate quidem enim culpa? Officia ad nam maxime hic, consequuntur porro at explicabo iste, voluptatem odio, accusantium amet minus pariatur!</p>
 						</div>
-						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter flexGrowShrink">
+							<h3 class="tituloNoticia fontSubtitle">Título Noticia</h3>
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, nam? Soluta ut dolore earum distinctio id rerum voluptatem quam aut, voluptates excepturi quia reprehenderit illum, nostrum commodi nam inventore repudiandae.</p>
 						</div>
-						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter flexGrowShrink">
+							<h3 class="tituloNoticia fontSubtitle">Título Noticia</h3>
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, nam? Soluta ut dolore earum distinctio id rerum voluptatem quam aut, voluptates excepturi quia reprehenderit illum, nostrum commodi nam inventore repudiandae.</p>
 						</div>
 					</div>
+
 					<div class="columnNoticias flexRowWrapBetweenStretchCenter">
-						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter flexGrowShrink">
+							<h3 class="tituloNoticia fontSubtitle">Título Noticia</h3>
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam necessitatibus vero deserunt nulla quam dolores autem tenetur voluptates, fugiat voluptate labore doloremque! Et, rerum, nemo dolores incidunt porro assumenda eveniet.</p>
 						</div>
-						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter flexGrowShrink">
+							<h3 class="tituloNoticia fontSubtitle">Título Noticia</h3>
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis quos ex quis debitis, aliquam veritatis? Aliquid deleniti cum, tempora expedita delectus sequi? Ab quidem dignissimos neque iusto totam, similique numquam.</p>
 						</div>
-						<div class="itemNoticia flexColumnNowrapCenterStretchCenter">
+						<div class="itemNoticia flexColumnNowrapCenterStretchCenter flexGrowShrink">
+							<h3 class="tituloNoticia fontSubtitle">Título Noticia</h3>
 							<p class="fontParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, ipsa tempore, illo eos cupiditate voluptates quisquam ex accusamus doloribus recusandae impedit debitis illum mollitia dolore voluptatem, vero in corporis. Dolor.</p>
 						</div>
 					</div>
 				</div>
 			</section>
 			
-			<section class="contenedorEventos flexColumnNowrapCenterCenterCenter">
-				<div class="columnEvento">
-					<div class="imgEvento">
-						<img src="" alt="Imagen del Evento">
+			<section class="contenedorEventos flexColumnNowrapStartStretchCenter">
+				<div class="columnEvento flexColumnNowrapCenterStretchCenter">
+					<div class="imgEvento flexGrowShrink">
+						<img src="media/imgs/slayer.jpg" alt="Imagen del Evento">
 					</div>
-					<div class="infoEvento">
-						<span class="diaEvento">Dia</span>
-						<span class="fechaEvento">Fecha</span>
-						<span class="lugarEvento">Lugar</span>
-						<span class="bandaLiderEvento">Banda</span>
+					<div class="infoEvento flexColumnNowrapCenterCenterCenter flexGrowShrink">
+						<span class="diaEvento fontSubtitle">Viernes</span>
+						<span class="fechaEvento fontSubtitle">29/Sept/2017</span>
+						<span class="lugarEvento fontParagraph">Hotel Clarion</span>
+						<span class="bandaLiderEvento fontTitle">Slayer</span>
 					</div>
 				</div>
 
-				<div class="columnEvento">
-					<div class="imgEvento">
-						<img src="" alt="Imagen del Evento">
+				<div class="columnEvento flexColumnNowrapCenterStretchCenter">
+					<div class="imgEvento flexGrowShrink">
+						<img src="media/imgs/concierto.jpg" alt="Imagen del Evento">
 					</div>
-					<div class="infoEvento">
-						<span class="diaEvento">Dia</span>
-						<span class="fechaEvento">Fecha</span>
-						<span class="lugarEvento">Lugar</span>
-						<span class="bandaLiderEvento">Banda</span>
+					<div class="infoEvento flexColumnNowrapCenterCenterCenter flexGrowShrink">
+						<span class="diaEvento fontSubtitle">Jueves</span>
+						<span class="fechaEvento fontSubtitle">8/Marzo/2018</span>
+						<span class="lugarEvento fontParagraph">Hotel Intercontinental</span>
+						<span class="bandaLiderEvento fontTitle">Testament</span>
 					</div>
 				</div>
 			</section>
 		</article>
 		
 
-		<footer class="fontParagraph">
-			<div class="navFooter">
-				<div>
+		<footer class="fontParagraph flexRowWrapCenterStretchCenter">
+			<div class="navFooter flexRowWrapCenterCenterCenter">
+				<div class="flexColumnNowrapCenterStretchCenter flexGrowShrink">
 					<a href="#" class="linkNav">Items</a>
 					<a href="#" class="linkNav">Items</a>
 					<a href="#" class="linkNav">Items</a>
 					<a href="#" class="linkNav">Items</a>
 				</div>
 
-				<div>
+				<div class="flexColumnNowrapCenterStretchCenter flexGrowShrink">
 					<a href="#" class="linkNav">Items</a>
 					<a href="#" class="linkNav">Items</a>
 					<a href="#" class="linkNav">Items</a>
 					<a href="#" class="linkNav">Items</a>
 				</div>
 
-				<div>
+				<div class="flexColumnNowrapCenterStretchCenter flexGrowShrink">
 					<a href="#" class="linkNav">Items</a>
 					<a href="#" class="linkNav">Items</a>
 					<a href="#" class="linkNav">Items</a>
@@ -129,11 +136,11 @@
 				</div>
 			</div>
 
-			<div class="redesSociales">
-				<div><span class="icon-facebook2 iconAnimation"></span></div>
-				<div><span class="icon-instagram iconAnimation"></span></div>
-				<div><span class="icon-twitter iconAnimation"></span></div>
-				<div><span class="icon-youtube iconAnimation"></span></div>
+			<div class="redesSociales flexRowWrapCenterCenterCenter">
+				<div class="flexGrowShrink"><span class="icon-facebook2 iconAnimation"></span></div>
+				<div class="flexGrowShrink"><span class="icon-instagram iconAnimation"></span></div>
+				<div class="flexGrowShrink"><span class="icon-twitter iconAnimation"></span></div>
+				<div class="flexGrowShrink"><span class="icon-youtube iconAnimation"></span></div>
 			</div>
 		</footer>
 
