Agregando responsive design, añadido menu adaptable

--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
 <body>
 
 	<div class="contenedor">
-		
 		<div class="portada flexColumnNowrapBetweenCenterBetween">
+
 			<header>
+				<div class="menuAdaptable flexRowWrapBetweenCenterCenter">
+					<span class="tituloMenu fontTitle">Menú</span>
+					<span class="hamburguesa icon-menu"></span>
+				</div>
 				<nav class="flexRowWrapBetweenCenterCenter">
 					<div class="navi flexRowWrapStartCenterCenter">
-						<a href="#" class="linkNav fontParagraph">Items</a>
-						<a href="#" class="linkNav fontParagraph">Items</a>
-						<a href="#" class="linkNav fontParagraph">Items</a>
-						<a href="#" class="linkNav fontParagraph">Items</a>
-						<a href="#" class="linkNav fontParagraph">Items</a>
+						<a href="#" class="linkNav fontParagraph">Inicio</a>
+						<a href="#" class="linkNav fontParagraph">Sobre Nosotros</a>
+						<a href="#" class="linkNav fontParagraph">Misión y Visión</a>
+						<a href="#" class="linkNav fontParagraph">Noticias</a>
+						<a href="#" class="linkNav fontParagraph">Galeria Multimedia</a>
 					</div>
 					<div class="divLogin flexRowWrapEndCenterCenter">
-						<a href="#" class="linkNav fontParagraph">Items</a>
+						<a href="#" class="linkNav fontParagraph">Sesión</a>
 					</div>
 				</nav>
 			</header>
@@ -115,24 +119,24 @@
 		<footer class="fontParagraph flexRowWrapCenterStretchCenter">
 			<div class="navFooter flexRowWrapCenterCenterCenter">
 				<div class="flexColumnNowrapCenterStretchCenter flexGrowShrink">
-					<a href="#" class="linkNav">Items</a>
-					<a href="#" class="linkNav">Items</a>
-					<a href="#" class="linkNav">Items</a>
-					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Inicio</a>
+					<a href="#" class="linkNav">Noticias</a>
+					<a href="#" class="linkNav">Editorial</a>
+					<a href="#" class="linkNav">Artículos</a>
 				</div>
 
 				<div class="flexColumnNowrapCenterStretchCenter flexGrowShrink">
-					<a href="#" class="linkNav">Items</a>
-					<a href="#" class="linkNav">Items</a>
-					<a href="#" class="linkNav">Items</a>
-					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Clan Hondureño</a>
+					<a href="#" class="linkNav">Entrevistas</a>
+					<a href="#" class="linkNav">Foros</a>
+					<a href="#" class="linkNav">Galeria</a>
 				</div>
 
 				<div class="flexColumnNowrapCenterStretchCenter flexGrowShrink">
-					<a href="#" class="linkNav">Items</a>
-					<a href="#" class="linkNav">Items</a>
-					<a href="#" class="linkNav">Items</a>
-					<a href="#" class="linkNav">Items</a>
+					<a href="#" class="linkNav">Biografías</a>
+					<a href="#" class="linkNav">Nuevos Lanzamientos</a>
+					<a href="#" class="linkNav">Letras de Canciones</a>
+					<a href="#" class="linkNav">Patrocinadores</a>
 				</div>
 			</div>
 
